fixed weird gap in background at the bottom

--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ form {
     margin: auto;
     max-width: 60vw;
     padding: 2%;
+    padding-bottom: 4.2%;
 }
 
 h1 {
